...
                                            await viewModel.getNextBreedsData()
                                        }
                                    }
                            }
                        }
                    }
                    .accessibilityIdentifier("breedsVStack")
                }
            }
            .padding(.horizontal, 16)
            .scrollIndicators(.hidden)
            .refreshable {
                viewModel.refreshedTriggered()
...
                    ProgressView()
                        .scaleEffect(1.4, anchor: .center)
                        .padding(.bottom, 34)
                }
            }
            .alert(viewModel.alertMessage, isPresented: $viewModel.isAlertActive) {
                Button("OK", role: .cancel) { }
            }
            
            if viewModel.isLoading {
                LoadingView()
            }
            
...
