...
                            .accessibilityIdentifier("confirmPasswordTextField")
                    }
                    
                    Button(viewModel.buttonTitle) {
                        viewModel.logInSignUpClicked(email: emailText, password: passwordText, confirmPassword: confirmPasswordText)
                    }
                    .accessibilityIdentifier("logInButton")
                    .buttonStyle(PrimaryButton())
                    .padding(.top, 60)
                    .padding(.bottom, 12)
                    .padding(.horizontal, 16)
                    
                    HStack {
...
