...
            return "Network Error! Invalid response header"
        case .serverError(statusCode: let code):
            return "Network Error! Error Occured with status code \(code)"
        case .rateLimitExceeded:
            return "Network Error! Too many request"
        case .duplicateFavorite:
            return "You have added to favorite"
        }
    }
}

protocol APIService {
    func makeRequest<T: Codable>(session: URLSession, for endpoint: Endpoint) async throws -> T
...
