...
                                                await viewModel.getNextPetsData(breedId: breed.id)
                                            }
                                        }
                                }
                            }
                        }
                        .accessibilityIdentifier("petsGrid")
                        .padding(.bottom, 16)
                    }
                }
                .scrollIndicators(.hidden)
                .refreshable {
                    viewModel.refreshedTriggered()
...
